fixing ASYNCWEB-34 by replacing '|' by the escape sequence before parsing with the URI class
git-svn-id: https://svn.apache.org/repos/asf/mina/asyncweb/trunk@807985 13f79535-47bb-0310-9956-ffa450edef68